# jukebot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  jukebot.py  pyproject.toml
.github/workflows/: on-push.yaml
cogs/: debug.py  music.py
cogs/utils/: checks.py
